--- a/.docker/db/my.cnf
+++ b/.docker/db/my.cnf
@@ -7,18 +7,24 @@ collation_server = utf8mb4_0900_ai_ci
 default-time-zone = SYSTEM
 log_timestamps = SYSTEM
 
+# ログ関連のディレクトリはそのまま(mysql-error.logなど)だと権限エラーでDBコンテナが勝手に落ちてしまうので
+# /var/log/mysql/mysql-error.logのように変更している。
+
 # Error Log
-log-error = mysql-error.log
+log-error = /var/log/mysql/mysql-error.log
+# log-error = mysql-error.log
 
 # Slow Query Log
 slow_query_log = 1
-slow_query_log_file = mysql-slow.log
+# slow_query_log_file = mysql-slow.log
+slow_query_log_file = /var/log/mysql/mysql-slow.log
 long_query_time = 1.0
 log_queries_not_using_indexes = 0
 
 # General Log
 general_log = 1
-general_log_file = mysql-general.log
+# general_log_file = mysql-general.log
+general_log_file = /var/log/mysql/mysql-general.log
 
 [mysql]
 default-character-set = utf8mb4
